--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/corejola/Node_MySQL#readme",
   "dependencies": {
+    "cli-table3": "^0.5.1",
     "inquirer": "^6.3.1",
     "mysql": "^2.17.1"
   }
